--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "getmac": "^6.6.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
